Stop dashboard panel errors from visually overflowing their containers (#17214)

--- a/src/core_plugins/kibana/public/dashboard/styles/index.less
+++ b/src/core_plugins/kibana/public/dashboard/styles/index.less
@@ -362,6 +362,7 @@ dashboard-viewport-provider {
       flex: 1 0 auto;
       justify-content: center;
       flex-direction: column;
+      overflow: auto;
 
       .fa-exclamation-triangle {
         font-size: 2em;
